--- a/conferenceAppDemo/src/main/resources/application.properties
+++ b/conferenceAppDemo/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Welcome
+#Run -> Edit Configurations -> Environment -> Edit environment variables
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql=true
 
 #to avoid exceptions when creating a lob object
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#custom property
+app.version=1.0.0
