--- a/conferenceAppDemo/pom.xml
+++ b/conferenceAppDemo/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>conferenceAppDemo</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>war</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -26,18 +27,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions> <!-- excludes the tomcat dependency -->
+			<!-- excludes the tomcat dependency -->
+			<!--<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-tomcat</artifactId>
 				</exclusion>
-			</exclusions>
+			</exclusions>-->
+		</dependency>
+		<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-tomcat</artifactId>
+				<scope>provided</scope>
 		</dependency>
 
-		<dependency>
+		<!-- instead of tomcat -->
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jetty</artifactId> <!-- instead of tomcat -->
-		</dependency>
+			<artifactId>spring-boot-starter-jetty</artifactId>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
