--- a/conferenceAppDemo/pom.xml
+++ b/conferenceAppDemo/pom.xml
@@ -13,7 +13,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>conferenceAppDemo</name>
 	<description>Demo project for Spring Boot</description>
-	<packaging>war</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -28,24 +27,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<!-- excludes the tomcat dependency -->
-			<!--<exclusions>
+			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-tomcat</artifactId>
 				</exclusion>
-			</exclusions>-->
-		</dependency>
-		<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-tomcat</artifactId>
-				<scope>provided</scope>
+			</exclusions>
 		</dependency>
 
 		<!-- instead of tomcat -->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jetty</artifactId>
-		</dependency>-->
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
