--- a/springDataCourse/pom.xml
+++ b/springDataCourse/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.conferenceApp</groupId>
-	<artifactId>conferenceAppDemo</artifactId>
+	<groupId>com.springDataCourse</groupId>
+	<artifactId>springDataCourse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>conferenceAppDemo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>springDataCourse</name>
+	<description>Demo project for Spring Data</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -23,30 +23,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<!-- excludes the tomcat dependency -->
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<!-- instead of tomcat -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jetty</artifactId>
-		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -65,12 +47,8 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<executable>true</executable>
-					<!-- with this option you just need to run maven package and inside target folder call ./fileJar and you can run the app as a standalone app
-					without this execute maven package and java -jar jarName inside /target to run the app-->
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
