--- a/todo-app-master/src/main/resources/application.properties
+++ b/todo-app-master/src/main/resources/application.properties
@@ -7,4 +7,12 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
 
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
+
+management.endpoints.web.exposure.include=beans, metrics, info, health, loggers, readiness
+management.endpoint.loggers.enabled=false
+
+management.endpoint.health.show-details=always
+
+spring.security.user.name=username
+spring.security.user.password=root
